#8 WIP: webpack導入 scssをビルドできるように設定

--- a/web/src/templates/layouts/base.html
+++ b/web/src/templates/layouts/base.html
@@ -15,5 +15,6 @@
         <!-- フッター -->
 	{% include "layouts/footer.html" %}
 </div>
+<link rel="stylesheet" type="text/css" href="/static/dist/style.css" />
 </body>
 </html>
