--- a/web/src/templates/top.html
+++ b/web/src/templates/top.html
@@ -1,4 +1,5 @@
 {%- extends "layouts/base.html" %}
 {%- block content %}
     <h1>これはtop.htmlの内容を表示</h1>
+    <img src="/static/お茶碗と箸.png">
 {%- endblock %}
