--- a/web/src/assets/src/css/header.scss
+++ b/web/src/assets/src/css/header.scss
@@ -1,3 +1,34 @@
+@import "common";
 header {
-  background: #c5f0f5;
+  background-color: $main-color;
+
+  .container {
+    .title {
+      font-size: 2.0rem;
+      padding: 20px;
+    }
+    .menu {
+      margin: 0 auto;
+      width: 80%;
+
+      ul {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        height: 50px;
+
+        li {
+          background-color: $sub-color;
+          border-radius: 10px;
+          flex: 1;
+          margin: 8px;
+          padding: 12px;
+          > a {
+            color: #ffffff;
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+  }
 }
