--- a/web/src/templates/layouts/header.html
+++ b/web/src/templates/layouts/header.html
@@ -1,11 +1,20 @@
 <header>
-  <div>
-    <navi>
+  <div class="container">
+    <div class="title">
+      <h1>株価クローラ</h1>
+    </div>
+    <div class="menu">
       <ul>
-        <li>クローリング結果</li>
-        <li>株価検索</li>
-        <li>ランキング</li>
+        <li>
+          <a href="">クローリング結果</a>
+        </li>
+        <li>
+          <a href="">株価検索</a>
+        </li>
+        <li>
+          <a href="">ランキング</a>
+        </li>
       </ul>
-    </navi>
+    </div>
   </div>
 </header>
