--- a/web/src/assets/src/css/header.scss
+++ b/web/src/assets/src/css/header.scss
@@ -3,8 +3,8 @@ header {
   background-color: $main-color;
 
   .container {
-    .title {
-      font-size: 2.0rem;
+    .title > h1 {
+      font-size: 3.0rem;
       padding: 20px;
     }
     .menu {
@@ -19,13 +19,16 @@ header {
 
         li {
           background-color: $sub-color;
-          border-radius: 10px;
+          border-radius: 5px;
           flex: 1;
-          margin: 8px;
+          margin: 1px;
           padding: 12px;
           > a {
             color: #ffffff;
             font-size: 1.2rem;
+          }
+          > a:hover {
+            color: #ffd700;
           }
         }
       }
