--- a/web/src/assets/src/css/header.scss
+++ b/web/src/assets/src/css/header.scss
@@ -9,7 +9,7 @@ header {
     }
     .menu {
       margin: 0 auto;
-      width: 80%;
+      width: 600px;
 
       ul {
         display: flex;
@@ -17,12 +17,14 @@ header {
         text-align: center;
         height: 50px;
 
+
         li {
           background-color: $sub-color;
           border-radius: 5px;
           flex: 1;
           margin: 1px;
           padding: 12px;
+
           > a {
             color: #ffffff;
             font-size: 1.2rem;
