--- a/web/src/templates/top.html
+++ b/web/src/templates/top.html
@@ -2,4 +2,33 @@
 {%- block content %}
     <h1>これはtop.htmlの内容を表示</h1>
     <img src="/static/お茶碗と箸.png">
+
+    <div class="top">
+        <h2>値上がり銘柄100</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>株価コード</th>
+                    <th>銘柄名</th>
+                    <th>現在値</th>
+                    <th>前日比(金額)</th>
+                    <th>前日比(比率)</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for elem in data["top_100"] %}
+                <tr>
+                    <td>{{ elem["code"] }}</td>
+                    <td>{{ elem["trading_name"] }}</td>
+                    <td>{{ elem["current_price"] }}</td>
+                    <td>{{ elem["day_diff"] }}</td>
+                    <td>{{ elem["ratio"] }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+<!--        {% for elem in data["top_100"] %}-->
+<!--            {{elem}}-->
+<!--        {% endfor %}-->
+    </div>
 {%- endblock %}
