#8 WIP: Vueでテンプレートに埋め込んだ[[message]]が表示されない問題を解決。以下参照。vue.esm-bundler.jsを利用するよう、webpackにaliasを設定。 https://v3.ja.vuejs.org/guide/installation.html#cdn-%E3%82%92%E5%88%A9%E7%94%A8%E3%80%81%E3%81%BE%E3%81%9F%E3%81%AF%E3%83%8F%E3%82%99%E3%83%B3%E3%83%88%E3%82%99%E3%83%A9%E3%83%BC%E3%82%92%E4%BD%BF%E7%94%A8%E3%81%97%E3%81%AA%E3%81%84%E5%A0%B4%E5%90%88

--- a/web/src/templates/top.html
+++ b/web/src/templates/top.html
@@ -5,10 +5,14 @@
         var data = JSON.parse('{{ json_data | safe }}')
     </script>
 
-    <div id="vue-app">
-        <p>[[ message ]]</p>
+    <div id="app-test">
+        <h1>テスト</h1>
+        <p>[[message]]</p>
+    </div>
+
+    <div>
         <h1>これはtop.htmlの内容を表示</h1>
-        <img src="/static/お茶碗と箸.png">
+<!--        <img src="/static/お茶碗と箸.png">-->
 
         <div class="top">
             <h2>値上がり銘柄100</h2>
@@ -62,5 +66,6 @@
             </table>
         </div>
     </div>
+
     <script src="/static/dist/js/top.bundle.js"></script>
 {%- endblock %}
