#8 WIP: Vue2.xでfilterは無くなったそう。Vue3.xではcomputeで実現すればいいみたい。色々やってみた。

--- a/web/src/templates/layouts/base.html
+++ b/web/src/templates/layouts/base.html
@@ -15,6 +15,6 @@
         <!-- フッター -->
 	{% include "layouts/footer.html" %}
 </div>
-<link rel="stylesheet" type="text/css" href="/static/dist/style.css" />
+<link rel="stylesheet" type="text/css" href="/static/dist/css/style.css" />
 </body>
 </html>
