--- a/web/src/templates/top.html
+++ b/web/src/templates/top.html
@@ -6,33 +6,46 @@
     </script>
 
     <div id="vue-top" class="page-top">
+        <div class="day-summary">
+            <h2>[[ days_results[0]['trading_date'] ]]のサマリ</h2>
+            <div class="content">
+                [[ days_results[0]['total'] ]]
+                [[ days_results[0]['rise'] ]]
+                [[ days_results[0]['drop'] ]]
+                [[ days_results[0]['unchanged'] ]]
+            </div>
+        </div>
+
         <div class="top-100">
-            <h2>値上がり上位100銘柄</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>株価コード</th>
-                        <th>銘柄名</th>
-                        <th>現在値</th>
-                        <th>前日比(金額)</th>
-                        <th>前日比(比率)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="elem in top_100">
-                        <td>[[ elem["code"] ]]</td>
-                        <td>[[ elem["trading_name"] ]]</td>
-                        <td>[[ toYen(elem["current_price"]) ]]</td>
-                        <td>[[ elem["day_diff"] ]]</td>
-                        <td>[[ elem["ratio"] ]]</td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2>値上り 上位100銘柄</h2>
+            <div class="content">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>株価コード</th>
+                            <th>銘柄名</th>
+                            <th>現在値</th>
+                            <th>前日比(金額)</th>
+                            <th>前日比(比率)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="elem in top_100">
+                            <td>[[ elem["code"] ]]</td>
+                            <td>[[ elem["trading_name"] ]]</td>
+                            <td>[[ elem["current_price"] ]]</td>
+                            <td>[[ elem["day_diff"] ]]</td>
+                            <td>[[ roundOff(elem["ratio"]) ]]%</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div class="bottom-100">
             <h2>値下がり下位100銘柄</h2>
-            <table>
+            <div class="content">
+                <table>
                 <thead>
                     <tr>
                         <th>株価コード</th>
@@ -48,10 +61,11 @@
                         <td>[[ elem["trading_name"] ]]</td>
                         <td>[[ elem["current_price"] ]]</td>
                         <td>[[ elem["day_diff"] ]]</td>
-                        <td>[[ elem["ratio"] ]]</td>
+                        <td>[[ roundOff(elem["ratio"]) ]]%</td>
                     </tr>
                 </tbody>
             </table>
+            </div>
         </div>
 
     </div>
