--- a/web/src/assets/src/css/common/header.scss
+++ b/web/src/assets/src/css/common/header.scss
@@ -6,6 +6,7 @@ header {
     .title > h1 {
       font-size: 3.0rem;
       padding: 20px;
+      text-align: center;
     }
     .menu {
       margin: 0 auto;
