--- a/web/src/assets/src/css/common/header.scss
+++ b/web/src/assets/src/css/common/header.scss
@@ -5,12 +5,13 @@ header {
   .container {
     .title > h1 {
       font-size: 3.0rem;
-      padding: 20px;
+      padding: 10px;
       text-align: center;
     }
     .menu {
-      margin: 0 auto;
-      width: 600px;
+      background-color: $sub-color;
+      //margin-left: 30px;
+      //width: 600px;
 
       ul {
         display: flex;
@@ -20,18 +21,18 @@ header {
 
 
         li {
-          background-color: $sub-color;
-          border-radius: 5px;
+          //background-color: $sub-color;
+          //border-radius: 5px;
           flex: 1;
           margin: 1px;
-          padding: 12px;
+          padding: 8px;
 
           > a {
-            color: #ffffff;
             font-size: 1.2rem;
+            color: #ffffff;
           }
           > a:hover {
-            color: #ffd700;
+            color: $main-color;
           }
         }
       }
