--- a/web/src/assets/src/css/common/header.scss
+++ b/web/src/assets/src/css/common/header.scss
@@ -1,17 +1,18 @@
 @import "common";
 header {
-  background-color: $main-color;
 
   .container {
     .title > h1 {
+      background-color: $main-color;
+      border-radius: 30px;
       font-size: 3.0rem;
-      padding: 10px;
-      text-align: center;
+      padding: 30px;
+      margin: 20px auto;
+      width: 300px;
     }
     .menu {
       background-color: $sub-color;
-      //margin-left: 30px;
-      //width: 600px;
+      margin: 20px 0 0 0;
 
       ul {
         display: flex;
