--- a/web/src/assets/src/css/top.scss
+++ b/web/src/assets/src/css/top.scss
@@ -1,17 +1,16 @@
 @import "common/common.scss";
 
-@mixin top_100_table {
+@mixin ranking_table {
   table {
       width: 100%;
 
       thead {
-        border-bottom: 1px solid black;
-        color: #ffffff;
 
         th {
-          background: $sub-color;
+          background-color: $background-color;
           position: sticky;
           top: 0;
+          border-bottom: 1px solid black;
         }
 
         th:nth-of-type(1) {
@@ -32,6 +31,7 @@
       }
 
       tbody {
+
         td:nth-of-type(1) {
           width: 10%;
         }
@@ -41,73 +41,100 @@
         td:nth-of-type(3) {
           text-align: right;
           width: 20%;
+          padding: 2px 10px 2px 10px;
         }
         td:nth-of-type(4) {
           text-align: right;
           width: 20%;
+          padding: 2px 10px 2px 10px;
         }
         td:nth-of-type(5) {
           text-align: right;
           width: 20%;
+          padding: 2px 10px 2px 10px;
         }
       }
     }
 }
 
 .page-top {
-  margin: 30px auto;
+  background: #ffffff;
+  margin: 0 auto;
 
-  .day-summary {
-    font-size: 1.1rem;
-    margin: 20px 80px;
+  thead {
+    th {
+      border-bottom: 1px solid black;
+      color: #000000;
+      font-weight: normal;
+      padding: 8px;
+    }
+  }
 
-    .content {
-      margin: 10px auto;
+  .ranking-wrapper {
+    padding: 40px;
+    margin: 0 auto;
 
-      table {
-        width: 100%;
+    .day-summary {
+      background-color: $background-color;
+      border-radius: 20px;
+      padding: 20px;
+      font-size: 1.1rem;
+      .content {
+        margin: 20px auto;
+        width: 90%;
 
-        thead {
-        border-bottom: 1px solid black;
-        color: #ffffff;
-          th {
-            background: $sub-color;
+        table {
+          width: 100%;
+
+          thead {
+            border-bottom: 1px solid black;
+            th {
+
+            }
           }
-        }
 
-        tbody {
-          td {
-            text-align: center;
+          tbody {
+            td {
+              text-align: center;
+            }
           }
         }
       }
     }
-  }
 
+    .top-100 {
+      background-color: $background-color;
+      border-radius: 20px;
+      padding: 20px;
+      margin-top: 20px;
+      font-size: 1.1rem;
 
-  .top-100 {
-    font-size: 1.1rem;
-    margin: 40px 80px;
+      .content {
+        height: 300px;
+        overflow: scroll;
+        margin: 20px auto;
+        width: 90%;
 
-    .content {
-      height: 300px;
-      overflow: scroll;
-      margin: 10px auto;
+        @include ranking_table
+      }
+    }
 
-      @include top_100_table
+    .bottom-100 {
+      font-size: 1.1rem;
+      background-color: $background-color;
+      border-radius: 20px;
+      padding: 20px;
+      margin-top: 20px;
+
+      .content {
+        height: 300px;
+        overflow: scroll;
+        margin: 20px auto;
+        width: 90%;
+
+        @include ranking_table
+      }
     }
   }
 
-  .bottom-100 {
-    font-size: 1.1rem;
-    margin: 40px 80px;
-
-    .content {
-      height: 300px;
-      overflow: scroll;
-      margin: 10px auto;
-
-      @include top_100_table
-    }
-  }
 }
