#12 ログイン機能実装 ログイン失敗でログイン画面にエラーメッセージ表示 ログイン成功で、セッションをcookieにセットしてTop画面にリダイレクト Top画面はcookieに有効なセッションがないと4xxエラー画面を表示

--- a/web/fastapi/src/app/templates/login.html
+++ b/web/fastapi/src/app/templates/login.html
@@ -12,6 +12,9 @@
       <div>
         <label for="passwd">パスワード</label>
         <input type="password" name="passwd" id="passwd" required>
+        <div class="message">
+          <p>{{ message }}</p>
+        </div>
       </div>
       <div>
         <input type="submit" value="ログイン">
