#12 ログイン機能

--- a/web/fastapi/src/app/templates/errors/4xx.html
+++ b/web/fastapi/src/app/templates/errors/4xx.html
@@ -1,6 +1,10 @@
-{%- extends "/layouts/base.html" %}
+{%- extends "/layouts/base_no_navigation.html" %}
 {%- block content %}
-
+  <div>
+    <div>アクセスできません。</div>
     <p>{{ message }}</p>
+  </div>
+
+
 
 {%- endblock %}
