--- a/web/fastapi/src/app/templates/errors/5xx.html
+++ b/web/fastapi/src/app/templates/errors/5xx.html
@@ -1,4 +1,4 @@
-{%- extends "/layouts/base.html" %}
+{%- extends "/layouts/base_no_navigation.html" %}
 {%- block content %}
     <p>Sorry. 何か変なことが起こったみたいです。</p>
 
