--- a/web/fastapi/src/assets/src/css/common/header.scss
+++ b/web/fastapi/src/assets/src/css/common/header.scss
@@ -10,7 +10,7 @@ header {
       margin: 20px auto;
       width: 300px;
     }
-    .menu {
+    .navigation {
       background-color: $sub-color;
       margin: 20px 0 0 0;
 
