--- a/web/fastapi/src/app/templates/login.html
+++ b/web/fastapi/src/app/templates/login.html
@@ -1,7 +1,8 @@
-{%- extends "layouts/base_no_header.html" %}
+{%- extends "layouts/base_no_navigation.html" %}
 {%- block content %}
 
-  <script type="text/javascript"></script>
+
+  <div id="vue-app" class=""></div>
 
   <div id="vue-app" class="">
     <form action="/login" method="post">
