--- a/web/fastapi/src/app/templates/login.html
+++ b/web/fastapi/src/app/templates/login.html
@@ -1,24 +1,30 @@
 {%- extends "layouts/base_no_navigation.html" %}
 {%- block content %}
 
+  <script type="text/javascript">
+    var data = JSON.parse('{{ json_data | safe }}')
+  </script>
 
-  <div id="vue-app" class=""></div>
-
-  <div id="vue-app" class="">
+  <div id="vue-app" class="page-login">
     <form action="/login" method="post">
-      <div>
-        <label for="login_id">ログインID</label>
-        <input type="text" name="login_id" id="login_id" required>
-      </div>
-      <div>
-        <label for="passwd">パスワード</label>
-        <input type="password" name="passwd" id="passwd" required>
-        <div class="message">
-          <p>{{ message }}</p>
+
+      <div class="login">
+        <div class="id">
+          <label for="login_id">ログインID</label>
+          <input type="text" name="login_id" id="login_id" required>
         </div>
-      </div>
-      <div>
-        <input type="submit" value="ログイン">
+
+        <div class="password">
+          <label for="passwd">パスワード</label>
+          <input type="password" name="passwd" id="passwd" required>
+          <div class="message">
+            <p>[[ message ]]</p>
+          </div>
+        </div>
+
+        <div class="login-button">
+          <input type="submit" value="ログイン">
+        </div>
       </div>
 
     </form>
